--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -9,14 +9,14 @@ sidebar_label: 'About Me'
 `Quantum computing / Machine Learning / Software Development`
 
 ## Private Contact
-- Email: nnct2000@gmail.com
-- Web: work-in-progress
-- LinkedIn: [linkedin.com/in/ncng/](https://www.linkedin.com/in/ncng/)
-- GitHub:  [github.com/NNCT2904](https://github.com/NNCT2904)
+- <Icon icon="fa-envelope fa-fw" size="lg" /> Email: nnct2000@gmail.com
+- <Icon icon="fa-globe fa-fw" size="lg" /> Web: work-in-progress
+- <Icon icon="fa-brands fa-linkedin fa-fw" size="lg" /> LinkedIn: [linkedin.com/in/ncng/](https://www.linkedin.com/in/ncng/)
+- <Icon icon="fa-brands fa-github fa-fw" size="lg" /> GitHub: [github.com/NNCT2904](https://github.com/NNCT2904)
 
 ## Work contact
-- Email: nguyenncongthanh@dtu.edu.vn
-- Address: 
+- <Icon icon="fa-envelope fa-fw" size="lg" /> Email: nguyenncongthanh@dtu.edu.vn
+- <Icon icon="fa-building-columns fa-fw" size="lg"/> Address: 
   - Institute of Research and Development, Duy Tan University, Da Nang 550000, Vietnam
   - Faculty of Information Technology, Duy Tan University, Da Nang city, 550000, Vietnam
 
