Add relevant information for portfolio

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,7 +1,8 @@
 ---
 slug: /
 sidebar_position: 0
-sidebar_label: 'About Me'
+sidebar_label: "About Me"
+hide_table_of_contents: true
 ---
 
 # Thanh Nguyen
@@ -9,16 +10,19 @@ sidebar_label: 'About Me'
 `Quantum computing / Machine Learning / Software Development`
 
 ## Private Contact
+
 - <Icon icon="fa-envelope fa-fw" size="lg" /> Email: nnct2000@gmail.com
 - <Icon icon="fa-globe fa-fw" size="lg" /> Web: work-in-progress
 - <Icon icon="fa-brands fa-linkedin fa-fw" size="lg" /> LinkedIn: [linkedin.com/in/ncng/](https://www.linkedin.com/in/ncng/)
 - <Icon icon="fa-brands fa-github fa-fw" size="lg" /> GitHub: [github.com/NNCT2904](https://github.com/NNCT2904)
 
 ## Work contact
+
 - <Icon icon="fa-envelope fa-fw" size="lg" /> Email: nguyenncongthanh@dtu.edu.vn
-- <Icon icon="fa-building-columns fa-fw" size="lg"/> Address: 
-  - Institute of Research and Development, Duy Tan University, Da Nang 550000, Vietnam
-  - Faculty of Information Technology, Duy Tan University, Da Nang city, 550000, Vietnam
+- <Icon icon="fa-building-columns fa-fw" size="lg" /> Address: - Institute of Research
+  and Development, Duy Tan University, Da Nang 550000, Vietnam - Faculty of Information
+  Technology, Duy Tan University, Da Nang city, 550000, Vietnam
 
 ## Related sites
+
 - This site, ofc: work-in-progresss
