--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -19,8 +19,10 @@ hide_table_of_contents: true
 ## Work contact
 
 - <Icon icon="fa-envelope fa-fw" size="lg" /> Email: nguyenncongthanh@dtu.edu.vn
-- <Icon icon="fa-building-columns fa-fw" size="lg" /> Address: - Institute of Research
-  and Development, Duy Tan University, Da Nang 550000, Vietnam - Faculty of Information
+- <Icon icon="fa-building-columns fa-fw" size="lg" /> Address: 
+  - Institute of Research
+  and Development, Duy Tan University, Da Nang 550000, Vietnam 
+  - Faculty of Information
   Technology, Duy Tan University, Da Nang city, 550000, Vietnam
 
 ## Related sites
