Add links to titles

--- a/docs/awards.mdx
+++ b/docs/awards.mdx
@@ -3,3 +3,14 @@ sidebar_position: 3
 ---
 
 # Awards
+
+## Certifications
+
+- IBM Quantum Challenge - Fall 2021, Achievement - Advanced. [Issued by IBM](https://www.credly.com/organizations/ibm/badges), [verified by Credly](https://www.credly.com/badges/84ff1b26-7fc2-47f3-bb26-d9a28dcc6079/public_url).
+
+## Scholarships
+
+- Deakin summer scholarship for the project [Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn).
+- Deakin STEM Scholarship for Honours Program.
+- Deakin STEM Scholarship for Bachelor Program.
+- Deakin College Vietnam Excellence Scholarship.
