--- a/docs/education.mdx
+++ b/docs/education.mdx
@@ -16,4 +16,4 @@ hide_table_of_contents: true
 - Research Project: Exploration of Variation Quantum Algorithms.
 - Recipient of Deakin STEM Scholarship for Honours Program.
 - Recipient of Deakin summer scholarship for the project Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn.
-- Graduated with First Class Honours – Candidate for PhD Program.
+- Graduated with *First Class Honours* - Candidate for PhD Program.
