--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -6,13 +6,14 @@ hide_table_of_contents: true
 ---
 
 # Thanh Nguyen
+{/* **Tim Nguyen**, or Nguyen Ngo Cong Thanh / Ngo Cong Thanh Nguyen */}
 
-`Quantum computing / Machine Learning / Software Development`
+`Quantum Computing / Machine Learning / Software Development`
 
 ## Private Contact
 
 - <Icon icon="fa-envelope fa-fw" size="lg" /> Email: nnct2000@gmail.com
-- <Icon icon="fa-globe fa-fw" size="lg" /> Web: work-in-progress
+- <Icon icon="fa-globe fa-fw" size="lg" /> Web: [nnct2904.github.io](https://nnct2904.github.io/)
 - <Icon icon="fa-brands fa-linkedin fa-fw" size="lg" /> LinkedIn: [linkedin.com/in/ncng/](https://www.linkedin.com/in/ncng/)
 - <Icon icon="fa-brands fa-github fa-fw" size="lg" /> GitHub: [github.com/NNCT2904](https://github.com/NNCT2904)
 
@@ -27,4 +28,4 @@ hide_table_of_contents: true
 
 ## Related sites
 
-- This site, ofc: work-in-progresss
+- [This site](/)
