Removed Blog folder as it is not longer used, add CV and links to CV, attempt fa-fw icons

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -12,15 +12,17 @@ hide_table_of_contents: true
 
 ## Private Contact
 
-- <Icon icon="fa-envelope fa-fw" size="lg" /> Email: nnct2000@gmail.com
-- <Icon icon="fa-globe fa-fw" size="lg" /> Web: [nnct2904.github.io](https://nnct2904.github.io/)
-- <Icon icon="fa-brands fa-linkedin fa-fw" size="lg" /> LinkedIn: [linkedin.com/in/ncng/](https://www.linkedin.com/in/ncng/)
-- <Icon icon="fa-brands fa-github fa-fw" size="lg" /> GitHub: [github.com/NNCT2904](https://github.com/NNCT2904)
+
+- <Icon icon="fa-fw fa-envelope" /> Email: nnct2000@gmail.com
+- <Icon icon="fa-fw fa-globe"  /> Web: [nnct2904.github.io](https://nnct2904.github.io/)
+- <Icon icon="fa-brands fa-fw fa-linkedin" /> LinkedIn: [linkedin.com/in/ncng/](https://www.linkedin.com/in/ncng/)
+- <Icon icon="fa-brands fa-fw fa-github" /> GitHub: [github.com/NNCT2904](https://github.com/NNCT2904)
 
 ## Work contact
 
-- <Icon icon="fa-envelope fa-fw" size="lg" /> Email: nguyenncongthanh@dtu.edu.vn
-- <Icon icon="fa-building-columns fa-fw" size="lg" /> Address: 
+- <Icon icon="fa-fw fa-user" /> <a target="\_blank" href={require('../static/assets/CV.docx').default} download="CV.docx"> Download my Resume </a>
+- <Icon icon="fa-fw fa-envelope" /> Email: nguyenncongthanh@dtu.edu.vn
+- <Icon icon="fa-fw fa-building-columns" /> Address: 
   - Institute of Research
   and Development, Duy Tan University, Da Nang 550000, Vietnam 
   - Faculty of Information
@@ -29,3 +31,5 @@ hide_table_of_contents: true
 ## Related sites
 
 - [This site](/)
+- [Prof. Jacob Cybulski](http://jacobcybulski.com/)
+- [Source code of this site](https://github.com/NNCT2904/nnct2904.github.io)
