--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -13,18 +13,15 @@ sidebar_position: 4
 
 Methodology and Tools used: Quantum Computing, Quantum Machine Learning, IBM Quantum, QISKIT
 
-<details>
-  <summary>**Description**</summary>
-  <div>
+:::info[Description]
 Training of quantum neural networks (QNN) is commonly affected by the emergence of barren plateaus (large flat areas in the loss function landscape), which impede the convergence of QNN parameter optimisation. 
 Such training problems are known to be caused by large quantum circuits, poor initialisation of QNN parameters, or the selection of an inferior cost function.
 Fortunately, there are well established techniques of mitigating the formation of barren plateaus, such as restricting the circuit depth, layerwise development of QNN circuits and a careful planning of the parameter initialisation process. 
 While dealing with barren plateaus, their mitigation strategies are expected to have a positive impact on the QNN training, however, in some cases while training convergence improves the overall QNN performance degrades.
 
 This project thus investigates an impact of barren plateaus mitigation strategy on the QNN capacity to learn, as measured by the network's local effective dimension, which is a dynamic statistical measure of the system's ability to generalise beyond the data used in its training.
-    
-  </div>
-</details>
+:::
+
 
 **Outcomes:**
 - Nguyen Ngo Cong Thanh and Jacob L. Cybulski (2023): "Investigation of Barren Plateaus in Quantum Neural Network Development." Presented at [10th International Congress on Industrial and Applied Mathematics (ICIAM 2023)](https://iciam2023.org/), Waseda University, Tokyo, Japan, 20-25 Aug, 2023.
@@ -34,12 +31,9 @@ This project thus investigates an impact of barren plateaus mitigation strategy 
 ### (2023) Applications of Quantum Algorithms in Finance {#Applications-of-Quantum-Algorithms-in-Finance}
 `Thanh Nguyen and H.L. Thi `
 
-<details>
-  <summary>**Description**</summary>
-  <div>
+:::info[Description]
 The Quantum processors' performance is predicted to surpass the traditional systems during this decade in computational performance and capabilities. This disruptive technology can significantly impact many industrial sectors in the long term. Other than communication and mathematics, we expect the finance sector to be one of the first to receive the prosperity of this new cutting-edge technology.
-  </div>
-</details>
+:::
 
 **Outcomes:**
 - Thanh Nguyen and H.L. Thi (2023): “Variational Quantum Algorithms in Finance.” Submitted to *Quantum Information Processing*.
