Resolved icon alignment

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -13,16 +13,16 @@ hide_table_of_contents: true
 ## Private Contact
 
 
-- <Icon icon="fa-fw fa-envelope" /> Email: nnct2000@gmail.com
-- <Icon icon="fa-fw fa-globe"  /> Web: [nnct2904.github.io](https://nnct2904.github.io/)
-- <Icon icon="fa-brands fa-fw fa-linkedin" /> LinkedIn: [linkedin.com/in/ncng/](https://www.linkedin.com/in/ncng/)
-- <Icon icon="fa-brands fa-fw fa-github" /> GitHub: [github.com/NNCT2904](https://github.com/NNCT2904)
+- <Icon icon="fa-fw fa-envelope" width="1em" size="lg"/> Email: nnct2000@gmail.com
+- <Icon icon="fa-fw fa-globe" width="1em" size="lg"/> Website: [nnct2904.github.io](https://nnct2904.github.io/)
+- <Icon icon="fa-brands fa-fw fa-linkedin" width="1em" size="lg"/> LinkedIn: [linkedin.com/in/ncng/](https://www.linkedin.com/in/ncng/)
+- <Icon icon="fa-brands fa-fw fa-github" width="1em" size="lg"/> GitHub: [github.com/NNCT2904](https://github.com/NNCT2904)
 
 ## Work contact
 
-- <Icon icon="fa-fw fa-user" /> <a target="\_blank" href={require('../static/assets/CV.docx').default} download="CV.docx"> Download my Resume </a>
-- <Icon icon="fa-fw fa-envelope" /> Email: nguyenncongthanh@dtu.edu.vn
-- <Icon icon="fa-fw fa-building-columns" /> Address: 
+- <Icon icon="fa-fw fa-user" width="1em" size="lg"/> <a target="\_blank" href={require('../static/assets/CV.docx').default} download="CV.docx"> Download my Resume </a>
+- <Icon icon="fa-fw fa-envelope" width="1em" size="lg"/> Email: nguyenncongthanh@dtu.edu.vn
+- <Icon icon="fa-fw fa-building-columns" width="1em" size="lg"/> Address: 
   - Institute of Research
   and Development, Duy Tan University, Da Nang 550000, Vietnam 
   - Faculty of Information
