Change the deploy command, confirmation of publication

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -7,8 +7,9 @@ hide_table_of_contents: true
 
 # Thanh Nguyen
 {/* **Tim Nguyen**, or Nguyen Ngo Cong Thanh / Ngo Cong Thanh Nguyen */}
+Advanced academic background and IT skills. Experienced in research
 
-`Quantum Computing / Machine Learning / Software Development`
+Things I do: `Quantum Computing / Machine Learning / Soft-Dev for fun`
 
 ## Private Contact
 
