--- a/docs/publications.mdx
+++ b/docs/publications.mdx
@@ -6,7 +6,7 @@ sidebar_position: 5
 
 ## In Progress
 
-- [Jacob L. Cybulski and Thanh Nguyen (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn." Accepted with Minor Revision for *Quantum Information Processing*.
+- [Jacob L. Cybulski and Thanh Nguyen (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn." *Quantum Information Processing*, Accepted for Publication.
 - [Thanh Nguyen and Jacob L. Cybulski (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Training Variational Quantum Models with Barren Plateaus Mitigation Strategies." In Preparation for journal submission (Advanced Draft).
 - [Thanh Nguyen and H.L. Thi (2023)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance): “Variational Quantum Algorithms in Finance.” Submitted to *Quantum Information Processing*.
 
