--- a/docs/publications.mdx
+++ b/docs/publications.mdx
@@ -6,9 +6,15 @@ sidebar_position: 5
 
 ## In Progress
 
-- [Jacob L. Cybulski and Thanh Nguyen (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn." *Quantum Information Processing*, Accepted for Publication.
 - [Thanh Nguyen and Jacob L. Cybulski (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Training Variational Quantum Models with Barren Plateaus Mitigation Strategies." In Preparation for journal submission (Advanced Draft).
+
 - [Thanh Nguyen and H.L. Thi (2023)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance): “Variational Quantum Algorithms in Finance.” Submitted to *Quantum Information Processing*.
 
+## Journal Papers
+
+- [Jacob L. Cybulski and Thanh Nguyen (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn." *Quantum Information Processing*.<br/> 
+[`Pre-Print`](../static/documents/Effective_Dim_V3.0_2023_11_21_Accepted.pdf)
+
 ## Conference Proceedings
-- [Thanh Nguyen and Jacob L. Cybulski (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Investigation of Barren Plateaus in Quantum Neural Network Development." Presented at [10th International Congress on Industrial and Applied Mathematics (ICIAM 2023)](https://iciam2023.org/), Waseda University, Tokyo, Japan, August 20-25, 2023.
+
+- [Thanh Nguyen and Jacob L. Cybulski](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Investigation of Barren Plateaus in Quantum Neural Network Development." Presented at [10th International Congress on Industrial and Applied Mathematics (ICIAM 2023)](https://iciam2023.org/accepted_ps#13568_Investigation_of_Barren_Plateaus_in_Quantum_Neural_Network_Development), Waseda University, Tokyo, Japan, August 20-25, 2023.
