Add Online version of Barren Plateaus Mitigation

--- a/docs/publications.mdx
+++ b/docs/publications.mdx
@@ -12,8 +12,11 @@ sidebar_position: 5
 
 ## Journal Papers
 
-- [Jacob L. Cybulski and Thanh Nguyen (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn." *Quantum Information Processing*.<br/> 
-[`Pre-Print`](../static/documents/Effective_Dim_V3.0_2023_11_21_Accepted.pdf)
+- [Jacob L. Cybulski and Thanh Nguyen (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn." *Quantum Information Processing*.<br/>
+[**[Online]**](https://link.springer.com/article/10.1007/s11128-023-04187-8)
+[**[Pre-Print]**](../static/documents/Effective_Dim_V3.0_2023_11_21_Accepted.pdf)
+
+{/* <Icon icon="fa-solid fa-arrow-up-right-from-square" width="1em"/> */}
 
 ## Conference Proceedings
 
