--- a/docs/publications.mdx
+++ b/docs/publications.mdx
@@ -12,7 +12,7 @@ sidebar_position: 5
 
 ## Journal Papers
 
-- [Jacob L. Cybulski and Thanh Nguyen (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn." *Quantum Information Processing*.<br/>
+- [Cybulski, J.L., Nguyen, T.](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn) Impact of barren plateaus countermeasures on the quantum neural network capacity to learn. *Quantum Inf Process* **22**, 442 (2023). [https://doi.org/10.1007/s11128-023-04187-8 <Icon icon="fa-solid fa-arrow-up-right-from-square" width="1em"/>](https://doi.org/10.1007/s11128-023-04187-8) <br/>
 [**[Online]**](https://link.springer.com/article/10.1007/s11128-023-04187-8)
 [**[Pre-Print]**](../static/documents/Effective_Dim_V3.0_2023_11_21_Accepted.pdf)
 
