--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -25,7 +25,7 @@ This project thus investigates an impact of barren plateaus mitigation strategy 
 
 **Outcomes:**
 - Nguyen Ngo Cong Thanh and Jacob L. Cybulski (2023): "Investigation of Barren Plateaus in Quantum Neural Network Development." Presented at [10th International Congress on Industrial and Applied Mathematics (ICIAM 2023)](https://iciam2023.org/accepted_ps#13568_Investigation_of_Barren_Plateaus_in_Quantum_Neural_Network_Development), Waseda University, Tokyo, Japan, 20-25 Aug, 2023.
-- Jacob L. Cybulski and Thanh Nguyen (2023): "Impact of Barren Plateaus Countermeasures on the Quantum Neural Network Capacity to Learn." *Quantum Information Processing*, Accepted for Publication.
+- Cybulski, J.L., Nguyen, T. Impact of barren plateaus countermeasures on the quantum neural network capacity to learn. *Quantum Inf Process* **22**, 442 (2023). [https://doi.org/10.1007/s11128-023-04187-8 <Icon icon="fa-solid fa-arrow-up-right-from-square" width="1em"/>](https://doi.org/10.1007/s11128-023-04187-8).
 - Thanh Nguyen and Jacob L. Cybulski (2023): "Training Variational Quantum Models with Barren Plateaus Mitigation Strategies." In Preparation for journal submission (Advanced Draft).
 
 ### (2023) Applications of Quantum Algorithms in Finance {#Applications-of-Quantum-Algorithms-in-Finance}
