Add Poster Presentation pre-print

--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -11,7 +11,7 @@ sidebar_position: 4
 
 `Thanh Nguyen, Supervised by Prof. Jacob Cybulski (Deakin SIT)`
 
-Methodology and Tools used: Quantum Computing, Quantum Machine Learning, IBM Quantum, QISKIT
+Methodology and Tools used: Quantum Computing, Quantum Machine Learning, IBM Quantum, Python QISKIT, Torch, SkLearn.
 
 :::info[Description]
 Training of quantum neural networks (QNN) is commonly affected by the emergence of barren plateaus (large flat areas in the loss function landscape), which impede the convergence of QNN parameter optimisation. 
@@ -29,7 +29,7 @@ This project thus investigates an impact of barren plateaus mitigation strategy 
 - Thanh Nguyen and Jacob L. Cybulski (2023): "Training Variational Quantum Models with Barren Plateaus Mitigation Strategies." In Preparation for journal submission (Advanced Draft).
 
 ### (2023) Applications of Quantum Algorithms in Finance {#Applications-of-Quantum-Algorithms-in-Finance}
-`Thanh Nguyen and H.L. Thi `
+`Thanh Nguyen and H.L. Thi`
 
 :::info[Description]
 The Quantum processors' performance is predicted to surpass the traditional systems during this decade in computational performance and capabilities. This disruptive technology can significantly impact many industrial sectors in the long term. Other than communication and mathematics, we expect the finance sector to be one of the first to receive the prosperity of this new cutting-edge technology.
