--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -36,4 +36,6 @@ The Quantum processors' performance is predicted to surpass the traditional syst
 :::
 
 **Outcomes:**
-- Thanh Nguyen and H.L. Thi (2023): “Variational Quantum Algorithms in Finance.” Submitted to *Quantum Information Processing*.
+- Thanh Nguyen and H.L. Thi (2023): "Variational Quantum Algorithms in Finance." Submitted to *Quantum Information Processing*.
+
+- Thanh Nguyen and H.L. Thi (2023): "Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction". Submitted to *Quantum Information Processing*.
