--- a/docs/publications.mdx
+++ b/docs/publications.mdx
@@ -8,7 +8,9 @@ sidebar_position: 5
 
 - [Thanh Nguyen and Jacob L. Cybulski (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Training Variational Quantum Models with Barren Plateaus Mitigation Strategies." In Preparation for journal submission (Advanced Draft).
 
-- [Thanh Nguyen and H.L. Thi (2023)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance): “Variational Quantum Algorithms in Finance.” Submitted to *Quantum Information Processing*.
+- [Thanh Nguyen and H.L. Thi (2023)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance): "Variational Quantum Algorithms in Finance." Submitted to *Quantum Information Processing*.
+
+- [Thanh Nguyen and H.L. Thi (2023)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance): "Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction". Submitted to *Quantum Information Processing*.
 
 ## Journal Papers
 
