--- a/docs/presentations.mdx
+++ b/docs/presentations.mdx
@@ -5,6 +5,6 @@ sidebar_position: 6
 # Presentations
 
 - [Nguyen Ngo Cong Thanh and Jacob L. Cybulski](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn), "Investigation of Barren Plateaus in Quantum Neural Network Development." Presented at [10th International Congress on Industrial and Applied Mathematics (ICIAM 2023)](https://iciam2023.org/accepted_ps#13568_Investigation_of_Barren_Plateaus_in_Quantum_Neural_Network_Development), Waseda University, Tokyo, Japan, 20-25 Aug, 2023.<br/>
-[**[Pre-Print]**](../static/documents/Research_Poster_ICIAM_2023.pdf)
+[**[PDF]**](../static/documents/Research_Poster_ICIAM_2023.pdf)
 
 - Jacob Cybulski and Nguyen Ngo Cong Thanh, "Investigation of Barren Plateaus Mitigation Strategies in the Development of Variational Quantum Models: An Overview of Problems and Solutions", Warsaw School of Economics, Poland, 19 Oct, 2023.
