--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -36,6 +36,6 @@ The Quantum processors' performance is predicted to surpass the traditional syst
 :::
 
 **Outcomes:**
+- Nguyen Ngo Cong Thanh and Hiep. L. Thi (2024), "Vairational Quantum Algorithms in Finance - A Reivew." Presented at [the 9th International Congress on Information and Communication Technology](https://sched.co/1aGRv), London, United Kingdom, 19-22 Feb, 2024.
 - Thanh Nguyen and H.L. Thi (2023): "Variational Quantum Algorithms in Finance." Submitted to *Quantum Information Processing*.
-
 - Thanh Nguyen and H.L. Thi (2023): "Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction". Submitted to *Quantum Information Processing*.
