--- a/docs/presentations.mdx
+++ b/docs/presentations.mdx
@@ -4,7 +4,7 @@ sidebar_position: 6
 
 # Presentations
 
-- [Nguyen Ngo Cong Thanh and Hiep. L. Thi](./projects#Applications-of-Quantum-Algorithms-in-Finance), "Vairational Quantum Algorithms in Finance - A Reivew." Presented at [the 9th International Congress on Information and Communication Technology](https://sched.co/1aGRv), London, United Kingdom, 19-22 Feb, 2024.<br/>
+- [Nguyen Ngo Cong Thanh and Hiep. L. Thi](./projects#Applications-of-Quantum-Algorithms-in-Finance), "Variational Quantum Algorithms in Finance - A Review." Presented at [the 9th International Congress on Information and Communication Technology](https://sched.co/1aGRv), London, United Kingdom, 19-22 Feb, 2024.<br/>
 [**[PDF]**](../static/documents/ICICT2024/Slides.pdf) 
 [**[Certificate]**](../static/documents/ICICT2024/Certificate_presentation.pdf)
 
