--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -38,6 +38,6 @@ The Quantum processors' performance is predicted to surpass the traditional syst
 **Outcomes:**
 - Nguyen Ngo Cong Thanh and Hiep. L. Thi (2024), "Vairational Quantum Algorithms in Finance - A Reivew." Presented at [the 9th International Congress on Information and Communication Technology](https://sched.co/1aGRv), London, United Kingdom, 19-22 Feb, 2024.
 
-- Thanh Nguyen and H.L. Thi (2023): "Variational Quantum Algorithms in Finance." Accepted for *Lecture Notes in Networks and Systems - Springer*.
+- Thi, H.L., Nguyen, T. (2024). Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1003. Springer, Singapore. https://doi.org/10.1007/978-981-97-3302-6_39.
 
-- Thanh Nguyen and H.L. Thi (2023): "Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction".  Accepted for *Lecture Notes in Networks and Systems - Springer*.
+-Cong, T.N.N., Thi, H.L. (2024). Variational Quantum Algorithms in Finance. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1002. Springer, Singapore. https://doi.org/10.1007/978-981-97-3299-9_2
