--- a/docs/publications.mdx
+++ b/docs/publications.mdx
@@ -8,10 +8,6 @@ sidebar_position: 5
 
 - [Thanh Nguyen and Jacob L. Cybulski (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Training Variational Quantum Models with Barren Plateaus Mitigation Strategies." In Preparation for journal submission (Advanced Draft).
 
-- [Thanh Nguyen and H.L. Thi (2023)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance): "Variational Quantum Algorithms in Finance." Accepted for *Lecture Notes in Networks and Systems - Springer*.
-
-- [Thanh Nguyen and H.L. Thi (2023)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance): "Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction".  Accepted for *Lecture Notes in Networks and Systems - Springer*.
-
 ## Journal Papers
 
 - [Cybulski, J.L., Nguyen, T.](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn) Impact of barren plateaus countermeasures on the quantum neural network capacity to learn. *Quantum Inf Process* **22**, 442 (2023). [https://doi.org/10.1007/s11128-023-04187-8 <Icon icon="fa-solid fa-arrow-up-right-from-square" width="1em"/>](https://doi.org/10.1007/s11128-023-04187-8). <br/>
@@ -20,6 +16,10 @@ sidebar_position: 5
 
 {/* <Icon icon="fa-solid fa-arrow-up-right-from-square" width="1em"/> */}
 
-## Conference Proceedings
+## Conference Papers
 
 - [Thanh Nguyen and Jacob L. Cybulski](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Investigation of Barren Plateaus in Quantum Neural Network Development." Presented at [10th International Congress on Industrial and Applied Mathematics (ICIAM 2023)](https://iciam2023.org/accepted_ps#13568_Investigation_of_Barren_Plateaus_in_Quantum_Neural_Network_Development), Waseda University, Tokyo, Japan, August 20-25, 2023.
+
+- [Cong, T.N.N., Thi, H.L. (2024)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance). Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1003. Springer, Singapore. https://doi.org/10.1007/978-981-97-3302-6_39.
+
+- [Cong, T.N.N., Thi, H.L. (2024)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance). Variational Quantum Algorithms in Finance. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1002. Springer, Singapore. https://doi.org/10.1007/978-981-97-3299-9_2
