--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -9,10 +9,10 @@ hide_table_of_contents: true
 {/* **Tim Nguyen**, or Nguyen Ngo Cong Thanh / Ngo Cong Thanh Nguyen */}
 Advanced academic background and IT skills. Experienced in research
 
-Things I do: `Quantum Computing / Machine Learning / Soft-Dev for fun`
+Things I am looking into:
+`Quantum Computing / Machine Learning / Cryptography / Blockchain / Physics / Soft-Dev for fun`
 
 ## Private Contact
-
 
 - <Icon icon="fa-fw fa-envelope" width="1em" size="lg"/> Email: nnct2000@gmail.com
 - <Icon icon="fa-fw fa-globe" width="1em" size="lg"/> Website: [nnct2904.github.io](https://nnct2904.github.io/)
