update projects and publications
Also upgrade Docusaurus version

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -9,8 +9,13 @@ hide_table_of_contents: true
 {/* **Tim Nguyen**, or Nguyen Ngo Cong Thanh / Ngo Cong Thanh Nguyen */}
 Advanced academic background and IT skills. Experienced in research
 
-Things I am looking into:
-`Quantum Computing / Machine Learning / Cryptography / Blockchain / Physics / Soft-Dev for fun`
+Things I am looking into: 
+- `Quantum Computing`
+- `Machine Learning`
+- `Cryptography`
+- `Blockchain` 
+- `Physics`
+- `Soft-Dev for fun`
 
 ## Private Contact
 
