--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -41,3 +41,11 @@ The Quantum processors' performance is predicted to surpass the traditional syst
 - Thi, H.L., Nguyen, T. (2024). Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1003. Springer, Singapore. https://doi.org/10.1007/978-981-97-3302-6_39.
 
 - Cong, T.N.N., Thi, H.L. (2024). Variational Quantum Algorithms in Finance. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1002. Springer, Singapore. https://doi.org/10.1007/978-981-97-3299-9_2
+
+### Physic-informed Quantum Machine Learning {#Physic-informed-Quantum-Machine-Learning}
+
+:::info[Description]
+Quantum machine learning (QML) has emerged as a promising approach to tackle complex problems that classical methods struggle to solve efficiently. In this paper, we explore the use of parameterized quantum circuits (PQCs) to learn and approximate solutions to PDEs. Especially ones that related to physics problems.
+:::
+
+- Thanh Nguyen et. al. (2025): "Physic informed Quantum Machine Learning: Solving simple Harmonic Oscillation PDE." In Preparation of Papers for IEEE TRANSACTIONS and JOURNALS (Advanced Draft).
