--- a/docs/publications.mdx
+++ b/docs/publications.mdx
@@ -7,6 +7,7 @@ sidebar_position: 5
 ## In Progress
 
 - [Thanh Nguyen and Jacob L. Cybulski (2023)](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Training Variational Quantum Models with Barren Plateaus Mitigation Strategies." In Preparation for journal submission (Advanced Draft).
+- [Thanh Nguyen et. al. (2025)](./projects.mdx#Physic-informed-Quantum-Machine-Learning): "Physic informed Quantum Machine Learning: Solving simple Harmonic Oscillation PDE." In Preparation of Papers for IEEE TRANSACTIONS and JOURNALS (Advanced Draft).
 
 ## Journal Papers
 
@@ -16,7 +17,7 @@ sidebar_position: 5
 
 {/* <Icon icon="fa-solid fa-arrow-up-right-from-square" width="1em"/> */}
 
-## Conference Papers
+## Conference / Papers
 
 - [Thanh Nguyen and Jacob L. Cybulski](./projects.mdx#The-Impact-of-Barren-Plateaus-Mitigation-Strategy-on-the-Quantum-Neural-Network-Capacity-to-Learn): "Investigation of Barren Plateaus in Quantum Neural Network Development." Presented at [10th International Congress on Industrial and Applied Mathematics (ICIAM 2023)](https://iciam2023.org/accepted_ps#13568_Investigation_of_Barren_Plateaus_in_Quantum_Neural_Network_Development), Waseda University, Tokyo, Japan, August 20-25, 2023.
 
