feat: Comprehensive SEO optimization and website enhancements

--- a/docs/awards.mdx
+++ b/docs/awards.mdx
@@ -1,5 +1,16 @@
 ---
 sidebar_position: 3
+sidebar_label: "Awards"
+title: "Awards & Recognitions | Academic Achievements"
+description: "Scholarships, certifications, and academic awards received by Thanh Nguyen for research excellence in blockchain security and quantum computing."
+keywords:
+  - IBM Quantum Challenge
+  - academic scholarships
+  - research awards
+  - STEM scholarship
+  - blockchain security awards
+  - quantum computing certification
+  - academic achievements
 ---
 
 # Awards
