--- a/docs/education.mdx
+++ b/docs/education.mdx
@@ -1,6 +1,17 @@
 ---
 sidebar_position: 2
 hide_table_of_contents: true
+sidebar_label: "Education"
+title: "Academic Background | Education"
+description: "Thanh Nguyen's academic qualifications from Deakin University, including Bachelor of Information Technology with Honours and research specializations."
+keywords:
+  - Deakin University
+  - information technology degree
+  - honours research
+  - quantum algorithms
+  - academic background
+  - blockchain security education
+  - STEM scholarship
 ---
 
 # Education
