--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -3,11 +3,23 @@ slug: /
 sidebar_position: 0
 sidebar_label: "About Me"
 hide_table_of_contents: true
+title: "Thanh Nguyen | Blockchain Security & Quantum Computing Researcher"
+description: "Blockchain security researcher specializing in fraud detection systems and quantum computing applications. Explore my research, publications, and projects in cryptography and blockchain technologies."
+keywords:
+  - blockchain security
+  - fraud detection
+  - quantum computing
+  - cryptography research
+  - machine learning
+  - blockchain applications
+  - academic researcher
 ---
+
+import {useBaseUrl} from '@docusaurus/useBaseUrl';
 
 # Thanh Nguyen
 {/* **Tim Nguyen**, or Nguyen Ngo Cong Thanh / Ngo Cong Thanh Nguyen */}
-Advanced academic background and IT skills. Experienced in research
+As a dedicated researcher at the forefront of blockchain security, I develop advanced fraud detection systems that leverage cryptographic innovations and machine learning algorithms. My academic investigations bridge quantum computing theory with practical blockchain applications, pushing the boundaries of distributed ledger security and trust in digital financial ecosystems.
 
 Things I am looking into: 
 - `Quantum Computing`
@@ -26,7 +38,7 @@ Things I am looking into:
 
 ## Work contact
 
-- <Icon icon="fa-fw fa-user" width="1em" size="lg"/> <a target="\_blank" href={require('../static/assets/CV.docx').default} download="CV.docx"> Download my Resume </a>
+- <Icon icon="fa-fw fa-user" width="1em" size="lg"/> <a target="_blank" href={require('@site/static/assets/CV.docx').default} download="CV.docx"> Download my Resume </a>
 - <Icon icon="fa-fw fa-envelope" width="1em" size="lg"/> Email: nguyenncongthanh@dtu.edu.vn
 - <Icon icon="fa-fw fa-building-columns" width="1em" size="lg"/> Address: 
   - Institute of Research
