--- a/docs/presentations.mdx
+++ b/docs/presentations.mdx
@@ -1,10 +1,21 @@
 ---
 sidebar_position: 6
+sidebar_label: "Presentations"
+title: "Conference Presentations | Academic Talks & Lectures"
+description: "Academic presentations by Thanh Nguyen on blockchain fraud detection, quantum algorithms, and barren plateaus in quantum neural networks at international conferences."
+keywords:
+  - academic presentations
+  - conference talks
+  - quantum computing lectures
+  - blockchain security presentations
+  - ICICT conference
+  - ICIAM conference
+  - research talks
 ---
 
 # Presentations
 
-- [Nguyen Ngo Cong Thanh and Hiep. L. Thi](./projects#Applications-of-Quantum-Algorithms-in-Finance), "Variational Quantum Algorithms in Finance - A Review." Presented at [the 9th International Congress on Information and Communication Technology](https://sched.co/1aGRv), London, United Kingdom, 19-22 Feb, 2024.<br/>
+- [Nguyen Ngo Cong Thanh and Hiep. L. Thi](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance), "Variational Quantum Algorithms in Finance - A Review." Presented at [the 9th International Congress on Information and Communication Technology](https://sched.co/1aGRv), London, United Kingdom, 19-22 Feb, 2024.<br/>
 [**[PDF]**](../static/documents/ICICT2024/Slides.pdf) 
 [**[Certificate]**](../static/documents/ICICT2024/Certificate_presentation.pdf)
 
