--- a/docs/projects.mdx
+++ b/docs/projects.mdx
@@ -1,5 +1,16 @@
 ---
 sidebar_position: 4
+sidebar_label: "Research Projects"
+title: "Research Projects | Blockchain Fraud Detection & Quantum Computing"
+description: "Explore Thanh Nguyen's research projects in blockchain security, fraud detection, quantum neural networks, and physics-informed quantum machine learning."
+keywords:
+  - blockchain fraud detection
+  - quantum neural networks
+  - barren plateaus mitigation
+  - physics-informed quantum machine learning
+  - blockchain security research
+  - quantum algorithms in finance
+  - research projects
 ---
 
 # Projects
@@ -45,9 +56,9 @@ The Quantum processors' performance is predicted to surpass the traditional syst
 :::
 
 **Outcomes:**
-- Nguyen Ngo Cong Thanh and Hiep. L. Thi (2024), "Vairational Quantum Algorithms in Finance - A Reivew." Presented at [the 9th International Congress on Information and Communication Technology](https://sched.co/1aGRv), London, United Kingdom, 19-22 Feb, 2024.
+- Cong, T.N.N., Thi, H.L. (2024), "Variational Quantum Algorithms in Finance - A Review." Presented at [the 9th International Congress on Information and Communication Technology](https://sched.co/1aGRv), London, United Kingdom, 19-22 Feb, 2024.
 
 - Thi, H.L., Nguyen, T. (2024). Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1003. Springer, Singapore. https://doi.org/10.1007/978-981-97-3302-6_39.
 
-- Cong, T.N.N., Thi, H.L. (2024). Variational Quantum Algorithms in Finance. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1002. Springer, Singapore. https://doi.org/10.1007/978-981-97-3299-9_2
+- Cong, T.N.N., Thi, H.L. (2024). Variational Quantum Algorithms in Finance. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1002. Springer, Singapore. https://doi.org/10.1007/978-981-97-3299-9_2.
 
