--- a/docs/publications.mdx
+++ b/docs/publications.mdx
@@ -1,5 +1,16 @@
 ---
 sidebar_position: 5
+sidebar_label: "Publications"
+title: "Publications | Blockchain & Quantum Computing Research"
+description: "Academic publications by Thanh Nguyen on blockchain security, quantum computing, and cryptography. Featuring journal papers, conference presentations, and works in progress."
+keywords:
+  - quantum neural networks
+  - barren plateaus
+  - blockchain research
+  - variational quantum algorithms
+  - cryptography publications
+  - academic papers
+  - research publications
 ---
 
 # Publications
@@ -23,4 +34,4 @@ sidebar_position: 5
 
 - [Cong, T.N.N., Thi, H.L. (2024)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance). Variational Quantum Algorithms in Anomaly Detection, Fraud Indicator Identification, Credit Scoring, and Stock Price Prediction. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1003. Springer, Singapore. https://doi.org/10.1007/978-981-97-3302-6_39.
 
-- [Cong, T.N.N., Thi, H.L. (2024)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance). Variational Quantum Algorithms in Finance. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1002. Springer, Singapore. https://doi.org/10.1007/978-981-97-3299-9_2
+- [Cong, T.N.N., Thi, H.L. (2024)](./projects.mdx#Applications-of-Quantum-Algorithms-in-Finance). Variational Quantum Algorithms in Finance. In: Yang, XS., Sherratt, S., Dey, N., Joshi, A. (eds) Proceedings of Ninth International Congress on Information and Communication Technology. ICICT 2024 2024. Lecture Notes in Networks and Systems, vol 1002. Springer, Singapore. https://doi.org/10.1007/978-981-97-3299-9_2.
